@@ -7,6 +7,10 @@ Changelog
 
 - Support remote host/port for MySQL commands.
 
+- Copy virtualenv files instead of symlinking (for Python 2.7 and up).
+  Symlinking breaks especially on NixOS since the symlinks point directly to
+  the store.
+
 
 1.3b1 (2016-03-09)
 ==================
